# Code-Chat

./: .gitignore  README.md  app.py  main.py  pyproject.toml
Agent/: CodingAgent.py
Embedding/: Embedding.py  __init__.py
src/: main.py
