[project]
name = "code-chat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KKonuru", email = "kausthubhkonuru@gmail.com" }
]
dependencies = [
    "ollama>=0.4.5",
    "streamlit>=1.41.1",
    "langchain>=0.3.14",
    "langchain-ollama>=0.2.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "langchain-community>=0.3.14",
    "faiss-cpu>=1.9.0.post1",
    "transformers>=4.47.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/code_chat"]
